sample/error/e01110-i.asn
E01110-I DEFINITIONS ::=
BEGIN
    bs1 BIT STRING ::= '001011021011'B  -- E01110-I
    bs2 BIT STRING ::= '000p1111000011'B -- E01110-I
END
